crates/plotnik-tests/tests/02-parser/recovery_unexpected/second_capture_rejected.txt
Q = (a (b) @x @y)
------------------ DIAGNOSTICS -------------------
error: expected a child node, or `)` to close
 --> query.ptk:1:15
  |
1 | Q = (a (b) @x @y)
  |               ^^
